# logy

./: README.md  logy.py  pyproject.toml
.github/workflows/: python-publish.yml
src/beautylog/: __init__.py  blog.py
tests/: testLogger.py
