[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beautylog"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*.py"]

[project]
name = "beauty-log"
version = "0.1.0"
description = "A customizable terminal logger with color schemes, grouping, and file output"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "colorama>=0.4.6"
]

[project.urls]
Homepage = "https://github.com/feketefh/logy"
